# Project_EMT_DDS

./: .$Схема_демонстрации.drawio.bkp  LibGateSCADA.cpp  TODO_LIST.xlsx  Схема_демонстрации.drawio
AdapterSM_Linux/: AdapterSM_Linux.sln
AdapterSM_Linux/AdapterSM_Linux/: AdapterSM_Linux.vcxproj  AdapterSharedMemory.cpp  AdapterSharedMemory.hpp  Adapters.cpp  Adapters.hpp  LoggerScada.cpp  LoggerScada.hpp  main.cpp
AdapterSM_Linux/AdapterSM_Linux/inc/: LoggerScada.hpp
DDS_Laboratory/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
DDS_Laboratory/DDS_Laboratory/: DDS_Laboratory.vcxproj  DDS_Laboratory.vcxproj.filters  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp  HelloWorld_main.cpp
DDS_Laboratory/generator_config/: generator_config.sln
DDS_Laboratory/generator_config/generator_config/: config.json  generator_config.vcxproj  generator_config.vcxproj.filters  main.cpp  main_c6925.cpp  main_ddsws.cpp  main_emt.cpp  main_prosys.cpp  main_sm.cpp  main_test_dataex.cpp
DDS_Laboratory/lab/: DDS_Laboratory.sln
DDS_Laboratory/lab/DDS_Laboratory/: DDS_Laboratory.vcxproj  DDS_Laboratory.vcxproj.filters  DdsData.cxx  DdsData.h  DdsDataPubSubTypes.cxx  DdsDataPubSubTypes.h  DdsPubSubTypes.h  HelloWorldPublisher.h  HelloWorldSubscriber.cpp  HelloWorldSubscriber.h  HelloWorld_main.cpp  my1.xml  my2.xml  my3.xml  my_prof.xml  test_tcp.cpp
DDS_Laboratory/listener_topic/: listener_topic.sln
DDS_Laboratory/listener_topic/listener_topic/: listener_topic.vcxproj  listener_topic.vcxproj.filters  main.cpp  (+1 more)
DDS_Laboratory/test4/: test4.sln
DDS_Laboratory/test_2.5.0/: test_2.5.0.sln
DDS_Laboratory/test_bug/: test_bug.sln
DDS_Laboratory/test_cmake/: CMakeLists.txt  CMakeSettings.json
DDS_Laboratory/test_cmake_2.5.0/: CMakeLists.txt  CMakeSettings.json
DDS_Laboratory/test_cmake_2.5.0/test_cmake_2.5.0/: CMakeLists.txt  test_cmake_2.5.0.cpp  test_cmake_2.5.0.h
DDS_Laboratory/test_vector_size3/: DDS_Laboratory.sln
GATE_EMT_DDS_v0.1/: GATE_EMT_DDS_v0.1.sln
GATE_EMT_DDS_v0.1/GATE_EMT_DDS_v0.1/: Config_Reader.cpp  Config_Reader.h  DDSUnit.cpp  DDSUnit.h  GATE_EMT_DDS_v0.1.vcxproj  GATE_EMT_DDS_v0.1.vcxproj.filters  GATE_EMT_DDS_v1.0.vcxproj  KKS_Reader.cpp  KKS_Reader.h  gate.h  main.cpp
GATE_EMT_DDS_v1.0/: ConfigDDS.txt.txt  GATE_EMT_DDS_v1.0.sln  config.json  config_logger.json  listcommand.json  Вывод-Системауправленияверсиями—Git.txt
GATE_EMT_DDS_v1.0/GATE_EMT_DDS_v1.0/: Adapters.cpp  Adapters.h  ConfigDDS.txt  Config_Reader.cpp  Config_Reader.h  DDSUnit.cpp  DDSUnit.h  GATE_EMT_DDS_v1.0.vcxproj  GATE_EMT_DDS_v1.0.vcxproj.filters  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp  KKS_Reader.cpp  KKS_Reader.h  List_KKS_In.txt  ModuleIO.cpp  ModuleIO.h  Module_CP.cpp  Module_CP.h  ReaderConfigUnits.cpp  ReaderConfigUnits.h  SM_DDS.cpp  SM_DDS.h  SharedMemoryAdaptor.cpp  SharedMemoryAdaptor.h  Unit_CP.cpp  Unit_CP.h  Unit_DDS_CP.cpp  Unit_DDS_CP.h  Unit_TCP_CP.cpp  Unit_TCP_CP.h  config.json  configunits.json  gate.cpp  gate.h  log  log_2021-09-07.txt  log_2021-09-29.txt  log_2021-10-07.txt  log_2021-10-11.txt  log_2021-10-25.txt  (+26 more)
GATE_EMT_SCADA_doc/: РУ АТЭ.docx
GATE_EMT_SCADA_doc/GATE_SCADA/: Service_IO(DC).drawio
Simulator_EMT/: Simulator_EMT.sln  config_simulator.json
Simulator_EMT/Simulator_EMT/: Simulator_EMT.vcxproj  Simulator_EMT.vcxproj.filters  adapter_EmtScadaAte.hpp  adpter_Emt_ScadaAte.cpp  config_reader_simulater.hpp  config_reader_simulator.cpp  config_simulator.json  main.cpp  security_handle.cpp  simulator.cpp  simulator.hpp  structs.hpp
TimeConvert/TimeConvert/: TimeConvert.vcxproj  TimeConverter.cpp
lib_EMT/: .$ЭМТ_SCADA.drawio.bkp  Диаграмма_clientsharedmemory.drawio  РУ АТЭ.0800.2921-2021 (изм 1).docx  ЭМТ_SCADA.drawio
lib_EMT/Atech_SharedMemory/: Atech_SharedMemory.sln
sm_test/: sm_test.sln
sm_test/sm_test/: ClientSharedMemory.h  Source.cpp  main.cpp  sm_test.vcxproj
test_1/test1/: CMakeLists.txt  CMakeSettings.json  HelloWorld.cxx  HelloWorldPublisher.cpp
test_1/test2_Sub/: CMakeLists.txt  HelloWorldSubscriber.cpp
test_1/test2_Sub/test2_Sub/: CMakeLists.txt  test2_Sub.cpp  test2_Sub.h
test_OPC/client_opc/: client_opc.sln
test_OPC_cmake/test_opc_cmake/: CMakeLists.txt
test_OPC_cmake/test_opc_cmake/test_opc_cmake/: CMakeLists.txt  test_opc_cmake.cpp  test_opc_cmake.h
test_block/: test_block.sln
test_block/test_block/: main.cpp  test_block.vcxproj
test_blockfile/: test_blockfile.sln
test_blockfile/test_blockfile/: main.cpp  test_blockfile.vcxproj  test_blockfile.vcxproj.filters
test_blockfile/test_loop/: config_simulator.json
test_loop/: config_simulator.json  configunits.json  log_gate_scada_2021-12-03.txt
test_mon/: test_mon.sln
test_mon/test_mon/: main.cpp  test_mon.vcxproj  test_mon.vcxproj.filters
test_mon/test_mon/mon/: CMakeLists.txt
test_mon/test_mon/mon/include/mon/: scd_os.h  scd_process.h  scd_process_mode.h  scd_process_severity.h
test_mon/test_mon/mon/src/: ecal_win_main.h  scd_global_accessors.cpp  scd_global_accessors.h  scd_process.cpp  scd_process_stub.cpp  sys_usage.cpp
test_spd_logger/: test_spd_logger.sln
test_spd_logger/test_spd_logger/: DdsStatus.cxx  DdsStatus.h  DdsStatusPubSubTypes.cxx  DdsStatusPubSubTypes.h  DdsStatusTypeObject.cxx  DdsStatusTypeObject.h  LoggerScada.h  LoggerScadaSpdDDS.cpp  LoggerScadaSpdDDS.h  log.1.txt  log.txt  log2  log_123  test_spd_logger.cpp  test_spd_logger.vcxproj  test_spd_logger.vcxproj.filters
test_visorblockfile/: test_visorblockfile.sln
test_visorblockfile/test_visorblockfile/: daemon_init.cpp  main.cpp  test_visorblockfile.vcxproj
visor_block/: visor_block.sln
visor_block/visor_block/: main.cpp  visor_block.vcxproj
(+417 files in other folders)
