# CMakeList.txt: проект CMake для test2_Sub; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (test2_Sub "test2_Sub.cpp" "test2_Sub.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
